add patterns block

--- a/scripts.ipynb
+++ b/scripts.ipynb
@@ -2208,6 +2208,738 @@
     "even.sort()\n",
     "print(\"\".join(lowercase)+\"\".join(uppercase)+\"\".join(odd)+\"\".join(even))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b27849",
+   "metadata": {},
+   "source": [
+    "# Python Functionals\n",
+    "### Map and Lambda Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7b50ee14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 8, 27]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cube = lambda x: x**3\n",
+    "\n",
+    "def fibonacci_el(n):\n",
+    "    if n in {0, 1}: \n",
+    "        return n\n",
+    "    return fibonacci_el(n - 1) + fibonacci_el(n - 2)\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    result = []\n",
+    "    for i in range(n):\n",
+    "        result.append(fibonacci_el(i))\n",
+    "    return result\n",
+    "\n",
+    "n = int(input())\n",
+    "print(list(map(cube, fibonacci(n))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc7432b",
+   "metadata": {},
+   "source": [
+    "# Regex and Parsing\n",
+    "### Detect Floating Point Number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6a71a204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def if_float(num):\n",
+    "    pattern = r'^[+-]?\\d*[.]\\d+$'\n",
+    "    result = re.fullmatch(pattern, num)\n",
+    "    if result is not None:\n",
+    "        print(True)\n",
+    "    else:\n",
+    "        print(False)\n",
+    "\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    if_float(input())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f6a160",
+   "metadata": {},
+   "source": [
+    "### Re.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "075b1db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "000\n",
+      "000\n",
+      "000\n"
+     ]
+    }
+   ],
+   "source": [
+    "regex_pattern = r\"[,.]\"\n",
+    "print(\"\\n\".join(re.split(regex_pattern, input())))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce92db2c",
+   "metadata": {},
+   "source": [
+    "### Group(), Groups() & Groupdict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "81a02f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input()\n",
+    "pattern = r'([A-Za-z0-9])\\1+'\n",
+    "m = re.findall(pattern, string)\n",
+    "if m:\n",
+    "    print(m[0])\n",
+    "else:\n",
+    "    print(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46983f20",
+   "metadata": {},
+   "source": [
+    "### Regex and Parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a4a9a9a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ee\n",
+      "Ioo\n",
+      "Oeo\n",
+      "eeeee\n"
+     ]
+    }
+   ],
+   "source": [
+    "S = input()\n",
+    "pattern = r\"(?<=[^aeiou])([aeiou]{2,})(?=[^aeiou])\"\n",
+    "search = re.findall(pattern, S , flags=re.IGNORECASE)\n",
+    "if search:\n",
+    "    for s in search:\n",
+    "        print(s)\n",
+    "else:\n",
+    "    print(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a83ccd",
+   "metadata": {},
+   "source": [
+    "### Re.start() & Re.end()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d29d9227",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n",
+      "(1, 2)\n",
+      "(4, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s, k = input(), input()\n",
+    "if re.search(r\"\"+k+\"\", s):\n",
+    "    for m in re.finditer(r\"(?=(\"+k+\"))\", s):\n",
+    "        print(f\"({m.start(1)}, {m.end(1)-1})\")\n",
+    "else:\n",
+    "    print(\"(-1, -1)\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da73ab6a",
+   "metadata": {},
+   "source": [
+    "### Regex Substitution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2fb77eda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 1;\n",
+      "b = input();\n",
+      "\n",
+      "if a + b > 0 and a - b < 0:\n",
+      "    start()\n",
+      "elif a*b > 10 or a/b < 1:\n",
+      "    stop()\n",
+      "print set(list(a)) | set(list(b)) \n",
+      "#Note do not change &&& or ||| or & or |\n",
+      "#Only change those '&&' which have space on both sides.\n",
+      "#Only change those '|| which have space on both sides.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sub_func(pattern, modified, line):\n",
+    "    while re.search(pattern, line):\n",
+    "        line = re.sub(pattern, modified, line)\n",
+    "    return line\n",
+    "\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    line = input()\n",
+    "    line = sub_func(r\"(\\s&&\\s)\", \" and \", line)\n",
+    "    line = sub_func(r\"(\\s\\|\\|\\s)\", \" or \", line)\n",
+    "    print(line)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed70b0d4",
+   "metadata": {},
+   "source": [
+    "### Validating Roman Numerals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a516e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "regex_pattern = r\"^M{0,3}(CM|CD|D?C{0,3})(XC|XL|L?X{0,3})(IX|IV|V?I{0,3})$\"\n",
+    "print(str(bool(re.match(regex_pattern, input()))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "638fe8c0",
+   "metadata": {},
+   "source": [
+    "### Validating phone numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "032edca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r'^[7|8|9]\\d{9}'\n",
+    "\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    print(\"YES\" if bool(re.fullmatch(pattern, input())) == True else \"NO\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca10479",
+   "metadata": {},
+   "source": [
+    "### Validating and Parsing Email Addresses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ff661f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEXTER <dexter@hotmail.com>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import email.utils\n",
+    "\n",
+    "pattern = r'^[a-z][A-Za-z0-9\\-\\,\\.\\_]+@[A-Za-z]+\\.[A-Za-z]{1,3}'\n",
+    "\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    s = input()\n",
+    "    parsed = email.utils.parseaddr(s)\n",
+    "    if bool(re.fullmatch(pattern, parsed[1])) == True:\n",
+    "        print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ddeec54",
+   "metadata": {},
+   "source": [
+    "### Hex Color Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4abe19bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#FfFdF8\n",
+      "#aef\n",
+      "#f9f9f9\n",
+      "#fff\n",
+      "#ABC\n",
+      "#fff\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r'#(([a-fA-F0-9]){6}|([a-fA-F0-9]){3})'\n",
+    "\n",
+    "N = int(input())\n",
+    "colors = []\n",
+    "for _ in range(N):\n",
+    "    line = input()\n",
+    "    search = re.findall(pattern, line)\n",
+    "    if len(line) != 0:\n",
+    "        if search and line[0] != \"#\":\n",
+    "            for i in search:\n",
+    "                colors.append(i[0])\n",
+    "for i in colors:\n",
+    "    print('#'+i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e87f99c",
+   "metadata": {},
+   "source": [
+    "### HTML Parser - Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "39458e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start : html\n",
+      "Start : head\n",
+      "Start : title\n",
+      "End   : title\n",
+      "End   : head\n",
+      "Start : body\n",
+      "-> data-modal-target > None\n",
+      "-> class > 1\n",
+      "Start : h1\n",
+      "End   : h1\n",
+      "Empty : br\n",
+      "End   : body\n",
+      "End   : html\n"
+     ]
+    }
+   ],
+   "source": [
+    "from html.parser import HTMLParser\n",
+    "\n",
+    "# create a subclass and override the handler methods\n",
+    "class MyHTMLParser(HTMLParser):\n",
+    "    def handle_starttag(self, tag, attrs):\n",
+    "        print(\"Start :\", tag)\n",
+    "        for key, value in attrs:\n",
+    "            print(\"->\", key, \">\", value)\n",
+    "    def handle_endtag(self, tag):\n",
+    "        print(\"End   :\", tag)\n",
+    "    def handle_startendtag(self, tag, attrs):\n",
+    "        print(\"Empty :\", tag)\n",
+    "        for key, value in attrs:\n",
+    "            print(\"->\", key, \">\", value)\n",
+    "\n",
+    "# instantiate the parser and fed it some HTML\n",
+    "parser = MyHTMLParser()\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    parser.feed(input())\n",
+    "parser.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e74451a",
+   "metadata": {},
+   "source": [
+    "### HTML Parser - Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "62ba1bff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Multi-line Comment\n",
+      "[if IE 9]>IE9-specific content\n",
+      "<![endif]\n",
+      ">>> Data\n",
+      " Welcome to HackerRank\n",
+      ">>> Single-line Comment\n",
+      "[if IE 9]>IE9-specific content<![endif]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyHTMLParser(HTMLParser):\n",
+    "    def handle_comment(self, data):\n",
+    "        if \"\\n\" in data:\n",
+    "            print(\">>> Multi-line Comment\")\n",
+    "            data = data.split(\"\\n\")\n",
+    "            for d in data:\n",
+    "                print(d)\n",
+    "        else:\n",
+    "            print(\">>> Single-line Comment\")\n",
+    "            print(data)\n",
+    "    def handle_data(self, data):\n",
+    "        if data != \"\\n\":\n",
+    "            print(\">>> Data\")\n",
+    "            print(data)\n",
+    "\n",
+    "html = \"\"      \n",
+    "N = int(input())\n",
+    "for i in range(N):\n",
+    "    html += input().rstrip()\n",
+    "    html += '\\n'\n",
+    "    \n",
+    "parser = MyHTMLParser()\n",
+    "parser.feed(html)\n",
+    "parser.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1faeb96f",
+   "metadata": {},
+   "source": [
+    "### Detect HTML Tags, Attributes and Attribute Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e7532719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "head\n",
+      "title\n",
+      "object\n",
+      "-> type > application/x-flash\n",
+      "-> data > your-file.swf\n",
+      "-> width > 0\n",
+      "-> height > 0\n",
+      "param\n",
+      "-> name > quality\n",
+      "-> value > high\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyHTMLParser(HTMLParser):\n",
+    "    def handle_starttag(self, tag, attrs):\n",
+    "        print(tag)\n",
+    "        for key, value in attrs:\n",
+    "            print(\"->\", key, \">\", value)\n",
+    "    def handle_startendtag(self, tag, attrs):\n",
+    "        print(tag)\n",
+    "        for key, value in attrs:\n",
+    "            print(\"->\", key, \">\", value)\n",
+    "\n",
+    "parser = MyHTMLParser()\n",
+    "N = int(input())\n",
+    "for _ in range(N):\n",
+    "    parser.feed(input())\n",
+    "parser.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e6e25a",
+   "metadata": {},
+   "source": [
+    "### Validating UID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9bcee81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid\n",
+      "Valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def unique(s):\n",
+    "    d = {}\n",
+    "    for i in s:\n",
+    "        if i in d:\n",
+    "            d[i] += 1\n",
+    "        else:\n",
+    "            d[i] = 1\n",
+    "    check = True\n",
+    "    for k, v in d.items():\n",
+    "        if v > 1:\n",
+    "            check = False\n",
+    "    return check\n",
+    "\n",
+    "\n",
+    "N = int(input())            \n",
+    "for _ in range(N):\n",
+    "    s = input()\n",
+    "    uppercase = len(re.findall(r'[A-Z]', s)) >= 2\n",
+    "    digits = len(re.findall(r'\\d', s)) >= 3\n",
+    "    alphanumeric = len(re.findall(r'[a-zA-Z0-9]', s)) == 10\n",
+    "    repeat = unique(s)\n",
+    "    print(\"Valid\" if sum([uppercase, digits, alphanumeric, repeat]) == 4 else \"Invalid\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e73decd",
+   "metadata": {},
+   "source": [
+    "### Validating Credit Card Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0299cc80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid\n",
+      "Valid\n",
+      "Invalid\n",
+      "Valid\n",
+      "Invalid\n",
+      "Invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_if_valid(number):\n",
+    "    temp_number = \"\"\n",
+    "    for i in number:\n",
+    "        if i == \"-\":\n",
+    "            continue\n",
+    "        else:\n",
+    "            temp_number += i\n",
+    "    number = temp_number\n",
+    "    pattern = r\"(\\d)\\1{3}\"\n",
+    "    search = re.search(pattern, number)\n",
+    "    if search == None:\n",
+    "        return \"Valid\"\n",
+    "    else:\n",
+    "        #print(number, \":\", search.group())\n",
+    "        return \"Invalid\"\n",
+    "\n",
+    "N = int(input())\n",
+    "pattern = r\"(^[4|5|6][0-9]{3}\\-?)([0-9]{4}\\-?){3}$\"\n",
+    "for _ in range(N):\n",
+    "    number = input()\n",
+    "    search = re.search(pattern, number)\n",
+    "    if search == None:\n",
+    "        print(\"Invalid\")\n",
+    "    else:\n",
+    "        print(check_if_valid(number))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38e56650",
+   "metadata": {},
+   "source": [
+    "### Validating Postal Codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d797f69d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "regex_integer_in_range = r\"^[1-9]\\d{5}$\"    # Do not delete 'r'.\n",
+    "regex_alternating_repetitive_digit_pair = r\"(\\d)(?=\\d\\1)\"    # Do not delete 'r'.\n",
+    "\n",
+    "P = input()\n",
+    "\n",
+    "print (bool(re.match(regex_integer_in_range, P)) \n",
+    "and len(re.findall(regex_alternating_repetitive_digit_pair, P)) < 2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff94e79f",
+   "metadata": {},
+   "source": [
+    "### Matrix Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6cd81c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Matrix#  %!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_multiple_input = input().rstrip().split()\n",
+    "n = int(first_multiple_input[0])\n",
+    "m = int(first_multiple_input[1])\n",
+    "matrix = []\n",
+    "for _ in range(n):\n",
+    "    matrix_item = input()\n",
+    "    matrix.append(matrix_item)\n",
+    "a = list(zip(*matrix))\n",
+    "string = \"\"\n",
+    "for i in range(len(a)):\n",
+    "    string += \"\".join(a[i])\n",
+    "pattern = r\"(?<=\\w)[!@#$%& ]{1,}(?=\\s*\\w)\"\n",
+    "search = re.sub(pattern, \" \", string)\n",
+    "print(search)\n"
+   ]
   }
  ],
  "metadata": {
