xml, closures and decorators, numpy

--- a/scripts.ipynb
+++ b/scripts.ipynb
@@ -2940,6 +2940,695 @@
     "search = re.sub(pattern, \" \", string)\n",
     "print(search)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b4779a",
+   "metadata": {},
+   "source": [
+    "# XML\n",
+    "### XML 1 - Find the Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad7d86dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as etree\n",
+    "\n",
+    "def get_attr_number(node):\n",
+    "    summury = 0\n",
+    "    for elem in node.iter():\n",
+    "        summury += len(elem.attrib)\n",
+    "    return summury\n",
+    "\n",
+    "xml = \"\"\n",
+    "for _ in range(int(input())):\n",
+    "    xml += input()\n",
+    "\n",
+    "tree = etree.ElementTree(etree.fromstring(xml))\n",
+    "root = tree.getroot()\n",
+    "print(get_attr_number(root))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a650fd6",
+   "metadata": {},
+   "source": [
+    "### XML2 - Find the Maximum Depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f7f4c8d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxdepth = 0\n",
+    "def depth(elem, level):\n",
+    "    global maxdepth\n",
+    "    if (level == maxdepth):\n",
+    "        maxdepth += 1\n",
+    "    for child in elem:\n",
+    "        depth(child, level + 1) \n",
+    "\n",
+    "n = int(input())\n",
+    "xml = \"\"\n",
+    "for i in range(n):\n",
+    "    xml =  xml + input() + \"\\n\"\n",
+    "tree = etree.ElementTree(etree.fromstring(xml))\n",
+    "depth(tree.getroot(), -1)\n",
+    "print(maxdepth)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f008b38",
+   "metadata": {},
+   "source": [
+    "# Clousures and Decorators\n",
+    "### Standardize Mobile Number Using Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1f1bcbcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['+91 78954 62130', '+91 91959 69878', '+91 98756 41230']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wrapper(f):\n",
+    "    def fun(l):\n",
+    "        f([f\"+91 {i[-10:-5]} {i[-5:]}\" for i in l])\n",
+    "    return fun\n",
+    "\n",
+    "@wrapper\n",
+    "def sort_phone(l):\n",
+    "    print(  sorted(l), sep='\\n')\n",
+    "\n",
+    "l = [input() for _ in range(int(input()))]\n",
+    "sort_phone(l) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae1805b",
+   "metadata": {},
+   "source": [
+    "### Decorators 2 - Name Directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e06d7503",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mr. Mike Thomson\n",
+      "Ms. Andria Bustle\n",
+      "Mr. Robert Bustle\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "\n",
+    "def person_lister(f):\n",
+    "    def inner(people):\n",
+    "        return map(f, sorted(people, key = lambda x: int(x[2])))\n",
+    "    return inner\n",
+    "\n",
+    "@person_lister\n",
+    "def name_format(person):\n",
+    "    return (\"Mr. \" if person[3] == \"M\" else \"Ms. \") + person[0] + \" \" + person[1]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    people = [input().split() for i in range(int(input()))]\n",
+    "    print(*name_format(people), sep='\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92319c41",
+   "metadata": {},
+   "source": [
+    "# Numpy\n",
+    "### Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "da4c15c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10.  -8.   4.   3.   2.   1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "def arrays(arr):\n",
+    "    return numpy.array(arr[::-1], float)\n",
+    "\n",
+    "arr = input().strip().split(' ')\n",
+    "result = arrays(arr)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ea4ea9",
+   "metadata": {},
+   "source": [
+    "### Shape and Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2796de19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = numpy.array(input().strip().split(' '), int)\n",
+    "print(numpy.reshape(my_array,(3,3)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af633bc1",
+   "metadata": {},
+   "source": [
+    "### Transpose and Flatten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98afc822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "matrix = []\n",
+    "for _ in range(N):\n",
+    "    matrix.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "my_array = numpy.array(matrix)\n",
+    "print(numpy.transpose(my_array))\n",
+    "print(my_array.flatten())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d70109d",
+   "metadata": {},
+   "source": [
+    "### Concatenate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8cd80eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [1 2]\n",
+      " [1 2]\n",
+      " [1 2]\n",
+      " [3 4]\n",
+      " [3 4]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M, P = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "NP = []\n",
+    "for _ in range(N):\n",
+    "    NP.append([int(i) for i in input().strip().split(' ')])\n",
+    "    \n",
+    "MP = []   \n",
+    "for _ in range(M):\n",
+    "    MP.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "array_1 = numpy.array(NP)\n",
+    "array_2 = numpy.array(MP)\n",
+    "\n",
+    "print(numpy.concatenate((array_1, array_2)))   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a78cba4",
+   "metadata": {},
+   "source": [
+    "### Zeros and Ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4a493888",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]]\n",
+      "[[[1 1 1]\n",
+      "  [1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]\n",
+      "  [1 1 1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shape = [int(i) for i in input().split()]\n",
+    "print(numpy.zeros(shape, dtype = int))\n",
+    "print(numpy.ones(shape, dtype = int))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "122b0429",
+   "metadata": {},
+   "source": [
+    "### Eye and Identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a3b33040",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  0.  0.]\n",
+      " [ 0.  1.  0.]\n",
+      " [ 0.  0.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpy.set_printoptions(legacy='1.13')\n",
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "print(numpy.eye(N, M))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84dd6c66",
+   "metadata": {},
+   "source": [
+    "### Array Mathematics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d3459552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6  8 10 12]]\n",
+      "[[-4 -4 -4 -4]]\n",
+      "[[ 5 12 21 32]]\n",
+      "[[0 0 0 0]]\n",
+      "[[1 2 3 4]]\n",
+      "[[    1    64  2187 65536]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([int(i) for i in input().strip().split(' ')])\n",
+    "    \n",
+    "b = []   \n",
+    "for _ in range(N):\n",
+    "    b.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "a = numpy.array(a, int)\n",
+    "b = numpy.array(b, int)\n",
+    "\n",
+    "print(numpy.add(a, b))\n",
+    "print(numpy.subtract(a, b))\n",
+    "print(numpy.multiply(a, b))\n",
+    "print(a // b)\n",
+    "print(numpy.mod(a, b))\n",
+    "print(numpy.power(a, b))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c07fdfc",
+   "metadata": {},
+   "source": [
+    "### Floor, Ceil and Rint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4ef60a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9.]\n",
+      "[  2.   3.   4.   5.   6.   7.   8.   9.  10.]\n",
+      "[  1.   2.   3.   4.   6.   7.   8.   9.  10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpy.set_printoptions(legacy='1.13')\n",
+    "my_array = numpy.array([float(i) for i in input().strip().split(' ')])\n",
+    "print(numpy.floor(my_array))\n",
+    "print(numpy.ceil(my_array))\n",
+    "print(numpy.rint(my_array))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f08c0b",
+   "metadata": {},
+   "source": [
+    "### Sum and Prod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "227bbeb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "my_array = numpy.array(a)\n",
+    "print(numpy.prod(numpy.sum(my_array, axis = 0)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da7a6046",
+   "metadata": {},
+   "source": [
+    "### Min and Max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f4ed9c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "my_array = numpy.array(a)\n",
+    "print(numpy.max(numpy.min(my_array, axis = 1)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "863d61b8",
+   "metadata": {},
+   "source": [
+    "### Mean, Var, and Std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9d92b89c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.5  3.5]\n",
+      "[ 1.  1.]\n",
+      "1.11803398875\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = [int(i) for i in input().strip().split(' ')]\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "my_array = numpy.array(a)\n",
+    "print(numpy.mean(my_array, axis = 1))\n",
+    "print(numpy.var(my_array, axis = 0))\n",
+    "print(numpy.round(numpy.std(my_array, axis = None), 11))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d3c537d",
+   "metadata": {},
+   "source": [
+    "### Dot and Cross"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "178281c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7 10]\n",
+      " [15 22]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([int(i) for i in input().strip().split(' ')])\n",
+    "    \n",
+    "b = []\n",
+    "for _ in range(N):\n",
+    "    b.append([int(i) for i in input().strip().split(' ')])\n",
+    "\n",
+    "A = numpy.array(a)\n",
+    "B = numpy.array(b)\n",
+    "print(numpy.dot(A, B))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ab800fe",
+   "metadata": {},
+   "source": [
+    "### Inner and Outer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9a7060f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[[0 0]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = numpy.array([i for i in input().strip().split(' ')], int)\n",
+    "B = numpy.array([i for i in input().strip().split(' ')], int)\n",
+    "\n",
+    "print(numpy.inner(A, B))\n",
+    "print(numpy.outer(A, B))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4bd4a5b",
+   "metadata": {},
+   "source": [
+    "### Polynomials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5400e5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = numpy.array([i for i in input().strip().split(' ')], float)\n",
+    "x = int(input())\n",
+    "print(numpy.polyval(P, x))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d6a3427",
+   "metadata": {},
+   "source": [
+    "### Linear Algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f4042692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "a = []\n",
+    "for _ in range(N):\n",
+    "    a.append([i for i in input().strip().split(' ')])\n",
+    "    \n",
+    "A = numpy.array(a, float)\n",
+    "print(numpy.round(numpy.linalg.det(A), 2))\n"
+   ]
   }
  ],
  "metadata": {
